# amal

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: benchmark.cpp
include/amal/: color.hpp  common.hpp  compare.hpp  euler_angles.hpp  exponential.hpp  geometric.hpp  half.hpp  matrix.hpp  rect.hpp  tranform.hpp  transform.hpp  trigonometric.hpp  vector.hpp
include/amal/details/: half.hpp  simd.hpp  type_info.hpp
include/amal/details/fwd/: vector.hpp
include/amal/details/vector/: definition.inl  operators.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/amal/integration/acul/: bin_stream.hpp  string.hpp
include/amal/internal/: half.hpp  type_info.hpp
include/amal/internal/fwd/: matrix.hpp  vector.hpp
include/amal/internal/matrix/: functions.hpp  operators.hpp
include/amal/internal/simd/: common.hpp  compare.hpp  compat.hpp  exponential.hpp  geometric.hpp  matrix.hpp
include/amal/internal/vector/: operators.hpp
include/internal/: type_info.hpp
include/internal/fwd/: half.hpp  matrix.hpp  vector.hpp
include/internal/matrix/: functions.hpp  operators.hpp
include/internal/simd/: compare.hpp  geometric.hpp  matrix.hpp
include/internal/vector/: operators.hpp
include/public/amal/: compare.hpp  geometric.hpp  half.hpp  matrix.hpp  tranform.hpp  vector.hpp
scripts/: CMakeLists.txt  matrix_multiply.py  matrix_multiply_fma.py  matrix_multiply_linear.py  matrix_multiply_v4df.py  matrix_multiply_v4sf.py  matrix_multiply_v4si.py  matrix_type.py  vector_type.py
scripts/templates/: matrix.tpp.j2  matrix_multiply.tpp.j2  matrix_multiply_nosimd.tpp.j2  matrix_multiply_simd.tpp.j2  vector.tpp.j2
tests/: CMakeLists.txt  common.cpp  compare.cpp  euler_angles.cpp  exponential.cpp  geometric.cpp  half.cpp  matrix.cpp  test.cpp  transform.cpp  trigonometric.cpp
